@@ -12,6 +12,7 @@
 #  database "dbname=workshop"
 #  database_schema "foo"
 #  translation_server "@translation"
+#  qmqp_server "localhost"
 #}
 
 # Instead of editing this file, you can place local configuration in
