@@ -92,6 +92,7 @@ system_dep = declare_dependency(link_with: system)
 io = static_library('io',
   'libcommon/src/io/FileDescriptor.cxx',
   'libcommon/src/io/WriteFile.cxx',
+  'libcommon/src/io/MultiWriteBuffer.cxx',
   'src/io/LineParser.cxx',
   'src/io/ConfigParser.cxx',
   include_directories: inc,
@@ -117,8 +118,16 @@ event = static_library('event',
 event_dep = declare_dependency(link_with: event)
 
 net = static_library('net',
+  'libcommon/src/net/SocketDescriptor.cxx',
   'libcommon/src/net/SocketAddress.cxx',
   'libcommon/src/net/AllocatedSocketAddress.cxx',
+  'libcommon/src/net/Resolver.cxx',
+  'libcommon/src/net/ConnectSocket.cxx',
+  'libcommon/src/net/djb/NetstringHeader.cxx',
+  'libcommon/src/net/djb/NetstringGenerator.cxx',
+  'libcommon/src/net/djb/NetstringInput.cxx',
+  'libcommon/src/net/djb/NetstringClient.cxx',
+  'libcommon/src/net/djb/QmqpClient.cxx',
   include_directories: inc,
   dependencies: [
     libinline, libdaemon, libsocket,
@@ -226,6 +235,7 @@ executable('cm4all-workshop',
   'src/Expand.cxx',
   'src/Instance.cxx',
   'src/Hook.cxx',
+  'src/EmailService.cxx',
   'src/cron/Config.cxx',
   'src/cron/Schedule.cxx',
   'src/cron/Queue.cxx',
