@@ -15,12 +15,15 @@
 
 struct CronJob;
 class SpawnService;
+class EmailService;
 class CurlGlobal;
 class CronQueue;
 class ExitListener;
 
 class CronWorkplace {
     SpawnService &spawn_service;
+    EmailService *const email_service;
+
     CurlGlobal &curl;
     ExitListener &exit_listener;
 
@@ -33,10 +36,12 @@ class CronWorkplace {
 
 public:
     CronWorkplace(SpawnService &_spawn_service,
+                  EmailService *_email_service,
                   CurlGlobal &_curl,
                   ExitListener &_exit_listener,
                   unsigned _max_operators)
         :spawn_service(_spawn_service),
+         email_service(_email_service),
          curl(_curl),
          exit_listener(_exit_listener),
          max_operators(_max_operators) {
@@ -51,6 +56,10 @@ public:
 
     SpawnService &GetSpawnService() {
         return spawn_service;
+    }
+
+    EmailService *GetEmailService() {
+        return email_service;
     }
 
     bool IsEmpty() const {
