@@ -4,6 +4,7 @@ cm4all-workshop (2.0.9) unstable; urgency=low
   * cron: system call filter
   * cron: support FORBID_USER_NS
   * cron: store HTTP errors in the results table
+  * cron: implement email notification
 
  --   
 
